--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jasseeeem.github.io/Task-Tracker"
+  "homepage": "http://jasseeeem.github.io/Task-Tracker",
   "name": "Task Tracker",
   "version": "0.1.0",
   "private": true,
