--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "predeploy": "nom run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "start-api": "cd api && venv\\Scripts\\activate &&  flask run --no-debugger",
