--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://task-tracker-react-flask.herokuapp.com/api/"
+  "proxy": "https://task-tracker-react-flask.herokuapp.com/api"
 }
